--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html(lang="ja")
     meta(charset="UTF-8")
     title そいつは誰だ！
     link(rel="stylesheet" href="./style.css")
-    script(defer)
-      | require('./renderer.js')
   body
     p 読み込み中
+    script
+      | require('./renderer.js')
