--- a/src/result.pug
+++ b/src/result.pug
@@ -5,6 +5,6 @@ html(lang="ja")
     title こいつだ！
     link(rel="stylesheet" href="./style.css")
     script(defer)
-      | require('./renderer/result.js')
+      | require('./renderer_result.js')
   body
     p 読み込み中
