--- a/src/result.pug
+++ b/src/result.pug
@@ -4,7 +4,7 @@ html(lang="ja")
     meta(charset="UTF-8")
     title こいつだ！
     link(rel="stylesheet" href="./style.css")
-    script(defer)
-      | require('./renderer_result.js')
   body
     p 読み込み中
+    script
+      | require('./renderer_result.js');
