milligramからspectreに変更

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,2 +1,3 @@
-
-@import "~milligram-sass"
+@import "~spectre.css/src/spectre.scss"
+@import "~spectre.css/src/spectre-exp.scss"
+@import "~spectre.css/src/spectre-icons.scss"
