--- a/src/style.sass
+++ b/src/style.sass
@@ -1,3 +1,3 @@
-@import "~spectre.css/src/spectre.scss"
-@import "~spectre.css/src/spectre-exp.scss"
-@import "~spectre.css/src/spectre-icons.scss"
+@import "~spectre.css/src/spectre"
+@import "~spectre.css/src/spectre-exp"
+@import "~spectre.css/src/spectre-icons"
